g_slist_reverse() may not be required in webKitWebAudioSrcLoop https://bugs.webkit.org/show_bug.cgi?id=113568

Patch by Praveen R Jadhav <praveen.j@samsung.com> on 2013-03-30
Reviewed by Philippe Normand.

Decremental 'for' loop logic implemented to avoid using g_slist_reverse().

Original code            - 2.025230 micro seconds per loop
Original code + patch    - 1.964759 micro seconds per loop

This patch is covered by existing webaudio tests.

* platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:
(webKitWebAudioSrcLoop):

Canonical link: https://commits.webkit.org/131977@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147278 268f45cc-cd09-0410-ab3c-d52691b4dbfc